[package]
name = "wei-docker"
version = "0.1.1"
edition = "2021"
description = "wei docker"
documentation = "https://github.com/zuiyue-com/wei-docker"
homepage = "https://github.com/zuiyue-com/wei-docker"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.4"
wei-log = "0.2.5"
wei-env = "0.2.4"
wei-download = { path = "../wei-download" }
wei-docker-install = { path = "../wei-docker-install" } #"0.2.6"
# tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"