[package]
name = "wei-docker"
version = "0.1.1"
edition = "2021"
description = "wei docker"
documentation = "https://github.com/zuiyue-com/wei-docker"
homepage = "https://github.com/zuiyue-com/wei-docker"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.5"
wei-log = "0.2.9"
wei-env = "0.2.13"
wei-download = { path = "../wei-download" }
wei-docker-install = { path = "../wei-docker-install" } #"0.2.6"

reqwest = "0.11"
serde_json = "1.0"
serde = "1.0"
percent-encoding = "2.3.1"